# ember-api

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.change-requests/: TASK-143-validation-blocker.md
.github/workflows/: ci.yml  deploy.yml
.reviews/: TASK-143-quality-review.md  TASK-144-quality-review.md  TASK-148-quality-review.md  TASK-152-quality-review.md  TASK-152-security-review.md
src/ember_api/: main.py
src/ember_api/routes/: chat.py  digest.py  health.py  query.py  results.py  watches.py
tests/: test_chat.py  test_digest_endpoint.py  test_health.py  test_query_endpoint.py  test_results_endpoint.py  test_search_endpoint.py  test_watches_endpoint.py
